[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://new_gdscript.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0624

[node name="aim_bullet" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 4, 4.5 )

[node name="aiming_area" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="aiming_area"]
position = Vector2( 30.7245, 0 )
scale = Vector2( 1.32582, 1 )
polygon = PoolVector2Array( -7, -2, 281, -321, 283.052, 30, 284, 423 )

[connection signal="body_entered" from="." to="." method="_on_aim_bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="aiming_area" to="." method="_on_aiming_area_body_entered"]
